--- a/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/views/view.xhtml
+++ b/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/views/view.xhtml
@@ -4,43 +4,20 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
-	<h:head>
-		<h:outputStylesheet library="css" name="main.css" />
-	</h:head>
-	<h:body>
-		<p:panel id="panelId">
-			<h:outputText styleClass="bold-hello-world"
-				value="#{i18n['guestbook-jsf-hello-world']}" />
-		</p:panel>
-		<hr />
-		<h:form>
-			<p:messages globalOnly="true" />
-			<p:outputLabel value="#{i18n['enter-your-name']}" />
-			<p:inputText value="#{testBacking.name}" />
-			<p:commandButton actionListener="#{testBacking.submit}"
-				value="#{i18n['submit']}">
-				<f:ajax execute="@form" render="@form" />
-			</p:commandButton>
-			<br />
-			<p:outputLabel value="Hello #{testBacking.name}" />
-		</h:form>
-		<hr />
-		<ul>
-			<li><em><h:outputText
-						value="Users: #{testBacking.usersCount}" /></em></li>
-			<li><em><h:outputText
-						value="Guestbooks: #{testBacking.guestbooksCount}" /></em></li>
-		</ul>
-		<hr />
 
-		<ul>
-			<li><em><h:outputText value="#{product.JSF}" /></em></li>
-			<li><em><h:outputText
-						value="#{product.LIFERAY_FACES_BRIDGE}" /></em></li>
-			<li><em><h:outputText
-						value="#{product.LIFERAY_FACES_BRIDGE_EXT}" /></em></li>
-			<li><em><h:outputText value="#{product.LIFERAY_FACES_UTIL}" /></em></li>
-			<li><em><h:outputText value="#{product.PRIMEFACES}" /></em></li>
-		</ul>
+	<h:head />
+	<h:body>
+		<f:choose>
+			<f:when test="#{guestbookBacking.editingGuestbook}">
+				<p:include src="/views/guestbook.xhtml" />
+			</f:when>
+			<f:when test="#{guestbookBacking.editingEntry}">
+				<p:include src="/views/guestbook_entry.xhtml" />
+			</f:when>
+			<f:otherwise>
+				<p:include src="/views/master.xhtml" />
+			</f:otherwise>
+		</f:choose>
 	</h:body>
+
 </f:view>
