fixes and using primefaces

--- a/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/views/guestbook_entry.xhtml
+++ b/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/views/guestbook_entry.xhtml
@@ -1,4 +1,3 @@
-
 <?xml version="1.0"?>
 
 <f:view xmlns="http://www.w3.org/1999/xhtml"
@@ -6,7 +5,8 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui">
 
 	<h:form>
 		<c:choose>
@@ -18,39 +18,46 @@
 			</c:otherwise>
 		</c:choose>
 
-		<aui:fieldset>
-			<aui:field id="entryNameField" label="#{i18n['name']}">
-				<h:message for="entryName" />
-				<h:inputText id="entryName" required="true"
+		<p:fieldset>
+			<p:message for="entryName" />
+			<p:panelGrid columns="2">
+				<p:outputLabel for="entryName" value="#{i18n['name']}" />
+
+				<p:inputText id="entryName" required="true"
 					value="#{guestbookBacking.selectedEntry.name}">
 					<f:ajax render="entryNameField" />
-				</h:inputText>
-			</aui:field>
-			<aui:field id="entryEmailField" label="#{i18n['email']}">
-				<h:message for="entryEmail" />
-				<h:inputText id="entryEmail" required="true"
+				</p:inputText>
+			</p:panelGrid>
+			<p:message for="entryEmail" />
+			<p:panelGrid columns="2">
+				<p:outputLabel for="entryEmail" value="#{i18n['email']}" />
+
+				<p:inputText id="entryEmail" required="true"
 					validatorMessage="#{i18n['please-enter-a-valid-email-address']}"
 					value="#{guestbookBacking.selectedEntry.email}">
 					<f:validateRegex pattern=".+[@].+[.].+" />
 					<f:ajax render="entryEmailField" />
-				</h:inputText>
-			</aui:field>
-			<aui:field id="entryMessageField" label="#{i18n['message']}">
-				<h:message for="entryMessage" />
-				<h:inputTextarea id="entryMessage" required="true"
+
+				</p:inputText>
+			</p:panelGrid>
+			<p:message for="entryMessage" />
+			<p:panelGrid columns="2">
+				<p:outputLabel for="entryMessage" value="#{i18n['message']}" />
+				<p:inputTextarea id="entryMessage" required="true"
 					value="#{guestbookBacking.selectedEntry.message}">
 					<f:ajax render="entryMessageField" />
-				</h:inputTextarea>
-			</aui:field>
-		</aui:fieldset>
+				</p:inputTextarea>
+			</p:panelGrid>
+		</p:fieldset>
 
-		<h:commandButton action="#{guestbookEntryBacking.save}"
+		<p:commandButton action="#{guestbookEntryBacking.save}" update="@all"
 			styleClass="btn btn-default" value="#{i18n['save']}">
 			<f:ajax execute="@form" render="@all" />
-		</h:commandButton>
-		<h:commandButton action="#{guestbookEntryBacking.cancel}" immediate="true"
-			styleClass="btn btn-default" value="#{i18n['cancel']}">
+		</p:commandButton>
+		<p:commandButton action="#{guestbookEntryBacking.cancel}"
+			update="@all" immediate="true" styleClass="btn btn-default"
+			value="#{i18n['cancel']}">
 			<f:ajax render="@all" />
-		</h:commandButton>
+		</p:commandButton>
 	</h:form>
 </f:view>
