--- a/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/views/guestbook.xhtml
+++ b/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/views/guestbook.xhtml
@@ -5,7 +5,8 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui">
 
 	<h:form>
 		<c:choose>
@@ -18,22 +19,29 @@
 			</c:otherwise>
 		</c:choose>
 
-		<aui:fieldset>
-			<aui:field id="guestbookNameField" label="#{i18n['name']}">
-				<h:message for="guestbookName" />
-				<h:inputText id="guestbookName" required="true"
-					value="#{guestbookBacking.selectedGuestbook.name}">
-					<f:ajax render="guestbookNameField" />
-				</h:inputText>
-			</aui:field>
-		</aui:fieldset>
-		<h:commandButton action="#{guestbookBacking.save}"
-			styleClass="btn btn-default" value="#{i18n['save']}">
-			<f:ajax execute="@form" render="@all" />
-		</h:commandButton>
-		<h:commandButton action="#{guestbookBacking.cancel}"
-			styleClass="btn btn-default" value="#{i18n['cancel']}">
-			<f:ajax render="@all" />
-		</h:commandButton>
+		<p:fieldset>
+			<p:message for="guestbookName" />
+			<p:panelGrid columns="2">
+				<p:panelGrid columns="2">
+					<p:outputLabel for="guestbookName" value="#{i18n['name']}" />
+
+					<p:inputText id="guestbookName" required="true"
+						value="#{guestbookBacking.selectedGuestbook.name}">
+						<f:ajax render="guestbookNameField" />
+					</p:inputText>
+				</p:panelGrid>
+				<p:panelGrid columns="2">
+					<p:commandButton action="#{guestbookBacking.save}" update="@all"
+						styleClass="btn btn-default" value="#{i18n['save']}">
+						<f:ajax execute="@form" render="@all" />
+					</p:commandButton>
+					<p:commandButton action="#{guestbookBacking.cancel}"
+						immediate="true" process="@this" update="@all"
+						styleClass="btn btn-default" value="#{i18n['cancel']}">
+						<f:ajax render="@all" />
+					</p:commandButton>
+				</p:panelGrid>
+			</p:panelGrid>
+		</p:fieldset>
 	</h:form>
 </f:view>
