--- a/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/views/master.xhtml
+++ b/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/views/master.xhtml
@@ -4,7 +4,8 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:portal="http://liferay.com/faces/portal">
 
 	<h:form>
 		<h:messages globalOnly="true" layout="table" />
@@ -69,6 +70,37 @@
 							<h:outputText value="#{entry.name}" />
 						</h:panelGroup>
 					</h:column>
+
+					<h:column>
+						<f:facet name="header">
+							<h:outputText value=" " />
+						</f:facet>
+						<h:commandButton action="#{guestbookEntryBacking.edit(entry)}"
+							styleClass="btn btn-default" value=" #{i18n['edit']} ">
+							<f:ajax render="@all" />
+						</h:commandButton>
+						<h:commandButton action="#{guestbookEntryBacking.delete(entry)}"
+							styleClass="btn btn-default" value=" #{i18n['delete']} "
+							onclick="if (! confirm('#{i18n['are-you-sure-you-want-to-delete-this']}')) {return false;}">
+							<f:ajax render="@all" />
+						</h:commandButton>
+
+						<portal:permissionsURL
+							roleTypes="#{permissionsURLModelBean.roleConstants.TYPES_REGULAR}"
+							modelResource="com.liferay.docs.guestbook.model.GuestbookEntry"
+							modelResourceDescription="#{entry.name}"
+							resourcePrimKey="#{entry.entryId}" var="permissionsUrl"
+							windowState="maximized">
+						</portal:permissionsURL>
+
+						<h:outputLink
+							rendered="#{liferay.userHasPortletPermission['PERMISSIONS']}"
+							styleClass="btn btn-default" value="#{permissionsUrl}">
+							<h:outputText value=" #{i18n['permissions']} " />
+						</h:outputLink>
+
+					</h:column>
+
 				</h:dataTable>
 			</c:otherwise>
 		</c:choose>
