--- a/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/views/master.xhtml
+++ b/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/views/master.xhtml
@@ -5,8 +5,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:portal="http://liferay.com/faces/portal"
-	>
+	xmlns:portal="http://liferay.com/faces/portal">
 
 	<h:form>
 		<h:messages globalOnly="true" layout="table" />
@@ -76,33 +75,39 @@
 						<f:facet name="header">
 							<h:outputText value=" " />
 						</f:facet>
-						<h:commandButton action="#{guestbookEntryBacking.edit(entry)}"
-							styleClass="btn btn-default" value=" #{i18n['edit']} ">
-							<f:ajax render="@all" />
-						</h:commandButton>
-						<h:commandButton action="#{guestbookEntryBacking.delete(entry)}"
-							styleClass="btn btn-default" value=" #{i18n['delete']} "
-							onclick="if (! confirm('#{i18n['are-you-sure-you-want-to-delete-this']}')) {return false;}">
-							<f:ajax render="@all" />
-						</h:commandButton>
+						<h:panelGroup rendered="#{entry.updateable}">
+							<h:commandButton action="#{guestbookEntryBacking.edit(entry)}"
+								styleClass="btn btn-default" value=" #{i18n['edit']} ">
+								<f:ajax render="@all" />
+							</h:commandButton>
+						</h:panelGroup>
 
-						<portal:permissionsURL
-							roleTypes="#{permissionsURLModelBean.roleConstants.TYPES_REGULAR}"
-							modelResource="com.liferay.docs.guestbook.model.GuestbookEntry"
-							modelResourceDescription="#{entry.name}"
-							resourcePrimKey="#{entry.entryId}" var="permissionsUrl"
-							windowState="pop_up">
-						</portal:permissionsURL>
+						<h:panelGroup rendered="#{entry.deleteable}">
+							<h:commandButton action="#{guestbookEntryBacking.delete(entry)}"
+								styleClass="btn btn-default" value=" #{i18n['delete']} "
+								onclick="if (! confirm('#{i18n['are-you-sure-you-want-to-delete-this']}')) {return false;}">
+								<f:ajax render="@all" />
+							</h:commandButton>
+						</h:panelGroup>
 
-						<h:commandButton
-							rendered="#{liferay.userHasPortletPermission['PERMISSIONS']}"
-							styleClass="btn btn-default" value="#{i18n['permissions']}"
-							onclick="javascript: showPermissionsGBEntriesPopup('#{permissionsUrl}')">
-							<f:ajax render="@none" />
-						</h:commandButton>
+						<h:panelGroup rendered="#{entry.permissible}">
+							<portal:permissionsURL
+								roleTypes="#{permissionsURLModelBean.roleConstants.TYPES_REGULAR}"
+								modelResource="com.liferay.docs.guestbook.model.GuestbookEntry"
+								modelResourceDescription="#{entry.name}"
+								resourcePrimKey="#{entry.entryId}" var="permissionsUrl"
+								windowState="pop_up">
+							</portal:permissionsURL>
+							<h:commandButton
+								styleClass="btn btn-default" value="#{i18n['permissions']}"
+								onclick="javascript: showPermissionsGBEntriesPopup('#{permissionsUrl}')">
+								<f:ajax render="@none" />
+							</h:commandButton>
+							<c:set var="showingPermissions" value="true" />
+						</h:panelGroup>
 					</h:column>
 				</h:dataTable>
-				<h:outputScript>				
+				<h:outputScript rendered="#{showingPermissions}">			
 					function showPermissionsGBEntriesPopup(url) {
 						var url = url;
 
