--- a/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/views/guestbook-admin/view.xhtml
+++ b/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/views/guestbook-admin/view.xhtml
@@ -1,25 +1,23 @@
 <?xml version="1.0"?>
 
 <f:view xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:aui="http://liferay.com/faces/aui"
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
-	<h:head>
-		<h:outputStylesheet library="css" name="main.css" />
-	</h:head>
+	
+	<h:head />
+	
 	<h:body>
-		<p:panel id="panelId">
-			<h:outputText styleClass="bold-hello-world"
-				value="#{i18n['guestbook-admin-jsf-portlet-hello-world']}" />
-		</p:panel>
-		<ul>
-			<li><em><h:outputText value="#{product.JSF}" /></em></li>
-			<li><em><h:outputText
-						value="#{product.LIFERAY_FACES_BRIDGE}" /></em></li>
-			<li><em><h:outputText
-						value="#{product.LIFERAY_FACES_BRIDGE_EXT}" /></em></li>
-			<li><em><h:outputText value="#{product.LIFERAY_FACES_UTIL}" /></em></li>
-			<li><em><h:outputText value="#{product.PRIMEFACES}" /></em></li>
-		</ul>
+		<c:choose>
+			<c:when test="#{guestbookBacking.editingGuestbook}">
+				<ui:include src="/WEB-INF/views/guestbook/guestbook.xhtml" />
+			</c:when>
+			<c:otherwise>
+				<ui:include src="/WEB-INF/views/guestbook-admin/guestbook_actions.xhtml" />
+			</c:otherwise>
+		</c:choose>
 	</h:body>
 </f:view>
