Add: Filtering entries (view permission)

--- a/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/views/guestbook-admin/guestbook_actions.xhtml
+++ b/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/views/guestbook-admin/guestbook_actions.xhtml
@@ -35,7 +35,7 @@
 					</h:column>
 					<h:column>
 						<f:facet name="header">
-							<h:outputText value=" " />
+							<h:outputText value="#{i18n['actions']}" />
 						</f:facet>
 
 						<h:panelGroup rendered="#{guestbook.updateable}">
