--- a/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/views/guestbook/master.xhtml
+++ b/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/views/guestbook/master.xhtml
@@ -68,7 +68,7 @@
 
 					<h:column>
 						<f:facet name="header">
-							<h:outputText value=" " />
+							<h:outputText value="#{i18n['actions']}" />
 						</f:facet>
 						<h:panelGroup rendered="#{entry.updateable}">
 							<h:commandButton action="#{guestbookEntryBacking.edit(entry)}"
